--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,17 +6,13 @@ plugins {
 android {
     namespace 'com.example.feedback'
     compileSdk 33
-
+    buildToolsVersion "31.0.0"
     defaultConfig {
         applicationId "com.example.feedback"
-        minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
+        minSdkVersion 21
+        targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -33,10 +29,10 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation project(path: ':feedback')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
