--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,8 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven { url "https://jitpack.io" }
+
     }
 }
 dependencyResolutionManagement {
@@ -10,8 +12,11 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
+
     }
 }
 rootProject.name = "FeedBack"
 include ':app'
 include ':feedback'
+include ':pulltorefresh'
