--- a/feedback/build.gradle
+++ b/feedback/build.gradle
@@ -4,13 +4,16 @@ plugins {
 
 android {
     compileSdkVersion 33
-    buildToolsVersion "31.0.0"
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 
 }
