--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+//    id 'com.android.application'
     id 'maven-publish'
 }
 
@@ -30,7 +31,7 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.example.feedback'
                 artifactId = 'feedback'
-                version = '1.0.7'
+                version = '1.0.8'
             }
         }
     }
