--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
                 groupId = 'com.example.feedback'
-                artifactId = 'feedback'
-                version = '1.1.2'
+                artifactId = 'chenback'
+                version = '1.1.3'
             }
         }
     }
