--- a/feedback/build.gradle
+++ b/feedback/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 31
 
     buildTypes {
         release {
@@ -16,6 +17,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
     }
 
+}
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.example.feedback'
+                artifactId = 'chenback'
+                version = '1.1.3'
+            }
+        }
+    }
 }
 
 dependencies {
