--- a/pulltorefresh/build.gradle
+++ b/pulltorefresh/build.gradle
@@ -1,12 +1,27 @@
-apply plugin: 'com.android.library'
-
+plugins {
+    id 'com.android.library'
+    id 'maven-publish'
+}
 android {
-    compileSdkVersion 33
+    compileSdkVersion 31
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.jwenfeng.library.pulltorefresh'
+                artifactId = 'pulltorefresh'
+                version = '1.0.0'
+            }
         }
     }
 }
